# ai_pw_kmeans

km/: CMakeLists.txt
km/include/: cls_sample.hpp  func.hpp  k_means.hpp  parser.hpp
km/src/: main.cpp
